@@ -20,8 +20,6 @@ dateTimeFormat.timeZone = TimeZone.getTimeZone("UTC")
 
 // Declare "extra properties" (variables) for the project - a Gradle thing that makes them special.
 ext {
-    //mainClassNameEditor = 'org.terasology.editor.TeraEd' // Actually need a new facade for this, maybe?
-
     // Read environment variables, including variables passed by jenkins continuous integration server
     env = System.getenv()
 
@@ -30,7 +28,6 @@ ext {
     // Stuff for our automatic version file setup
     startDateTimeString = dateTimeFormat.format(new Date())
     versionInfoFileDir = new File(buildDir, 'classes/org/terasology/version')
-    //println "versionInfoFileDir is $versionInfoFileDir"
     versionInfoFile = new File(versionInfoFileDir, 'versionInfo.properties')
     versionFileName = 'VERSION'
     versionBase = new File(templatesDir, "version.txt").text.trim()
@@ -71,15 +68,6 @@ sourceSets {
             output.classesDir 'build/classes'
         }
     }
-
-    // Put the main engine unit tests outside the standard build dir to exclude them from the standard jar
-    // TODO This prevents an issue during game load but need to make the test classes available for modules
-    test {
-        java {
-            output.classesDir 'build/testClasses'
-            output.resourcesDir 'build/testClasses'
-        }
-    }
 }
 
 // Customizations for the main compilation configuration
@@ -97,7 +85,6 @@ configurations {
 
 // Primary dependencies definition
 dependencies {
-
     // Main library files fetched online
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.2'
     compile group: 'com.google.guava', name: 'guava', version: '15.0'
@@ -105,8 +92,8 @@ dependencies {
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '2.5.0'
     compile group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
     compile group: 'com.projectdarkstar.ext.jorbis', name: 'jorbis', version: '0.0.17'
-    compile group: 'org.lwjgl.lwjgl', name: 'lwjgl', version: LWJGL_VERSION
-    compile group: 'org.lwjgl.lwjgl', name: 'lwjgl_util', version: LWJGL_VERSION
+    compile group: 'org.lwjgl.lwjgl', name: 'lwjgl', version: LwjglVersion
+    compile group: 'org.lwjgl.lwjgl', name: 'lwjgl_util', version: LwjglVersion
     compile group: 'io.netty', name: 'netty', version: '3.6.5.Final'
     compile group: 'org.reflections', name: 'reflections', version: '0.9.9-RC1'
     compile group: 'java3d', name: 'vecmath', version: '1.5.2'
@@ -116,18 +103,13 @@ dependencies {
     compile group: 'org.newdawn.slick', name: 'slick', version: '237'
     compile group: 'org.terasology.bullet', name: 'tera-bullet', version: '1.0.0'
     compile group: 'com.esotericsoftware.reflectasm', name: 'reflectasm', version: '1.07'
-	compile group: 'ec.util', name: 'MersenneTwister', version: '20'
+    compile group: 'ec.util', name: 'MersenneTwister', version: '20'
 
     // Wildcard dependency to catch any libs provided with the project (remote repo preferred instead)
     compile fileTree(dir: 'libs', include: '*.jar')
 
     // Needed as "compile" for logback.groovy in IntelliJ - otherwise it could be left as a runtime only dependency
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.0.13'
-
-    // These dependencies are only needed for running tests
-    testCompile group: 'junit', name: 'junit', version: '4.10'
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.0'
-    testCompile group: 'org.jboss.shrinkwrap', name: 'shrinkwrap-depchain-java7', version: '1.1.3'
 
     // In addition to all the above the dev source set also needs to depend on what gets compiled in main
     devCompile sourceSets.main.output
@@ -168,20 +150,6 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     manifest.attributes("Implementation-Title": "Terasology-" + project.name)
     classifier = 'javadoc'
     from javadoc.destinationDir
-}
-
-// Extra details provided for unit tests
-test {
-    dependsOn rootProject.extractNatives
-
-    // ignoreFailures: Specifies whether the build should break when the verifications performed by this task fail.
-    ignoreFailures = true
-
-    // showStandardStreams: makes the standard streams (err and out) visible at console when running tests
-    testLogging.showStandardStreams = true
-
-    // Arguments to include while running tests
-    jvmArgs '-Xms512m', '-Xmx1024m', '-XX:MaxPermSize=128m'
 }
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -237,7 +205,6 @@ jar.dependsOn createVersionInfoFile
 // General IDE customization                                                                                         //
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-// For IntelliJ add a bunch of excluded directories. Or not so much a bunch in the engine version of this
 idea {
     module {
         // Add development "dev" dir
@@ -249,6 +216,15 @@ idea {
         testOutputDir = file('build/testClasses')
     }
 }
+
+//eclipse.jdt.file.withProperties { props ->
+//	props.setProperty('org.eclipse.jdt.core.compiler.problem.rawTypeReference', 'ignore');
+//	props.setProperty('org.eclipse.jdt.core.compiler.problem.unusedLocal', 'ignore');
+//	props.setProperty('org.eclipse.jdt.core.compiler.problem.unusedPrivateMember', 'ignore');
+//	props.setProperty('org.eclipse.jdt.core.compiler.problem.incompleteEnumSwitch', 'ignore');
+//	props.setProperty('org.eclipse.jdt.core.compiler.problem.missingSerialVersion', 'ignore');
+//	props.setProperty('org.eclipse.jdt.core.compiler.problem.uncheckedTypeOperation', 'ignore');
+//}
 
 checkstyle {
     ignoreFailures = true
